<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.pain.log.painlog="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/backup_st"
            android:icon="@drawable/ic_storage"
            android:title="@string/viaLocal"
            com.pain.log.painlog:showAsAction="ifRoom" />

        <item
            android:id="@+id/backup_dr"
            android:icon="@drawable/ic_drive"
            android:title="@string/viaDrive"
            com.pain.log.painlog:showAsAction="ifRoom" />

        <item
            android:id="@+id/backup_db"
            android:icon="@drawable/ic_dropbox"
            android:title="@string/viaDropbox"
            com.pain.log.painlog:showAsAction="ifRoom" />
<!--
        <item
            android:id="@+id/backup_em"
            android:icon="@drawable/ic_mail"
            android:title="@string/viaMail"
            com.pain.log.painlog:showAsAction="ifRoom" />-->
    </menu>